--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
 
             </li>
 
-kk 
 
 
 
@@ -135,6 +134,131 @@ kk
   
 
 
+  <!-- Hero section  -->
+
+
+  
+  <!-- Hero-section -->
+
+
+
+  <div class="back-img hand">
+
+
+
+    <div class="tests text-center">
+      <h1 class="suc-word text-white">Always Fresh & <span class="text">Organic</span><br>Vegetables</h1>
+      <p class="fs-6 text-white mt-5 d-none d-md-block">Our Job is to filling Your Tummy With Delicious Healthy Food
+        <br> and Fast free
+        Delivery.
+      </p>
+      <p class="fs-6 tex text-centert-white mt-5 d-md-none">Our Job is to filling Your Tummy With Delicious Healthy Food
+        and Fast
+        free Delivery.</p>
+
+      <button class="btn-1  ">Shop Now</button>
+      <button class="btn-2">About us</button>
+    </div>
+
+  </div>
+
+  <div class="back-img hand-1">
+
+
+
+    <div class="tests text-center">
+      <h1 class="suc-word text-white">Always Fresh & <span class="text">Organic</span> <br>Vegetables</h1>
+      <p class="fs-5 text-white mt-5">Our Job is to filling Your Tummy With Delicious Healthy Foodand Fast free
+        Delivery.
+      </p>
+
+      <button class="btn-1 ">Shop Now</button>
+      <button class="btn-2">About us</button>
+    </div>
+
+  </div>
+
+
+  <!-- cards -->
+  <div class="cards-bg py-5 ">
+
+
+    <div class="container mt-5">
+
+
+      <h1 class="sada text-center mt-5">Our Special <span class="text">Features</span></h1>
+      <p class="text-center  d-none d-md-block ">Our purpose is to build solutions that remove barriers preventing
+        people <br> from
+        doing their best work, and this is at the heart.</p>
+      <p class="saada text-center d-md-none ">Our purpose is to build solutions that remove barriers preventing people
+        from
+        doing their best work, and this is at the heart.</p>
+
+      <div class="row d-flex justify-content-center align-items-center d-md-none d-lg-flex">
+
+        <div class="cards col-sm-6 col-lg-4 text-center ">
+          <img src="./images/bowl-veg.png" alt="">
+          <h5 class="mt-4">Fresh Organic Vegetable</h5>
+          <div class="hr  m-auto mt-3"></div>
+          <p class="fs-6  mt-4">Not only a great theme, but the customer support is excellent.</p>
+          <button class="btn-card">Learn More</button>
+        </div>
+
+        <div class="cards col-sm-6 col-lg-4 text-center ">
+          <img src="./images/bike.png" alt="">
+          <h5 class="mt-4">Fast & Easy Grocery Delivery</h5>
+          <div class="hr  m-auto mt-3"></div>
+          <p class="fs-6 mt-4">Support is helping to fix my issues now from my previous statement.</p>
+          <button class="btn-card">Learn More</button>
+        </div> 
+
+        <div class="cards col-sm-6 col-lg-4 text-center">
+          <img src="./images/Mobile-girl.png" alt="">
+          <h5 class="mt-4">Very Easy Payment System</h5>
+          <div class="hr m-auto mt-3"></div>
+          <p class="fs-6 mt-4">Best customer services and with quality design like this? You guys are the best.</p>
+          <button class="btn-card">Learn More</button>
+        </div>
+      </div>
+
+
+
+
+
+      <div class="d-flex justify-content-center align-items-center d-none d-md-flex d-lg-none">
+
+        <div class="cards-2 text-center ">
+          <img src="./images/bowl-veg.png" alt="">
+          <h5 class="mt-4">Fresh Organic Vegetable</h5>
+          <div class="hr  m-auto mt-3"></div>
+          <p class="fs-6  mt-4">Not only a great theme, but the customer support is excellent.</p>
+          <button class="btn-card">Learn More</button>
+        </div>
+
+        <div class="cards-2 text-center ">
+          <img  src="./images/bike.png" alt="">
+          <h5 class="mt-4">Fast & Easy Grocery Delivery</h5>
+          <div class="hr  m-auto mt-3"></div>
+          <p class="fs-6 mt-4">Support is helping to fix my issues now from my previous statement.</p>
+          <button class="btn-card">Learn More</button>
+        </div> 
+
+        <div class="cards-2 text-center">
+          <img src="./images/Mobile-girl.png" alt="">
+          <h5 class="mt-4">Very Easy Payment System</h5>
+          <div class="hr m-auto mt-3"></div>
+          <p class="fs-6 mt-4">Best services with quality design like this? You guys are the best.</p>
+          <button class="btn-card">Learn More</button>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+
+
+  
 
 
 
