Catgerize + Add To Cart done

--- a/index.html
+++ b/index.html
@@ -258,9 +258,220 @@
 
 
 
-  
+
+<!-- Catagerize section  -->
 
 
+
+<div class="container my-5">
+    <h1 class="sada">Popular <span class="text">Category</span></h1>
+    <div class="d-flex align-items-center justify-content-between">
+      <p class="mt-4  d-none d-md-block">What separates theme from all other web design agencies is the ability to <br>
+        offer the most
+        Friendly Experience you can imagine.</p>
+      <p class="saada mt-4 d-md-none">What separates theme from all other web design agencies is the ability to offer
+        the most
+        Friendly Experience you can imagine.</p>
+      <div class="hand">
+        <a class=" left-right text-decoration-none  rounded p-2 " href=""><i
+            class="ri-arrow-left-line text-dark fs-3"></i></a>
+        <a class=" left-right text-decoration-none ms-1 rounded p-2 " href=""><i
+            class="ri-arrow-right-line text-dark fs-3"></i></a>
+      </div>
+    </div>
+    <div class="hand-1 mt-4">
+      <a class=" left-right text-decoration-none me-4  rounded p-2 " href=""><i
+          class="ri-arrow-left-line text-dark fs-3"></i></a>
+      <a class=" left-right text-decoration-none  rounded p-2 " href=""><i
+          class="ri-arrow-right-line text-dark fs-3"></i></a>
+    </div>
+    <div class="row hand">
+      <div class=" categ col-lg-2 col-md-3 col-sm-1 text-center  rounded  mx-lg-3 mx-md-4 mt-3 py-3   ">
+
+        <img src="./images/Vegetable.png" alt="">
+        <h5 class="mt-3">Vegetable</h5>
+
+      </div>
+      <div class=" categ col-lg-2 col-md-3 col-sm-1 text-center  rounded  mx-lg-3 mx-md-4 mt-3 py-3   ">
+        <img src="./images/Fruits.png" alt="">
+        <h5 class="mt-3">Fruits</h5>
+      </div>
+      <div class=" categ col-lg-2 col-md-3 col-sm-1 text-center  rounded  mx-lg-3 mx-md-4 mt-3 py-3   ">
+        <img src="./images/Dried.png" alt="">
+        <h5 class="mt-3">Dried</h5>
+      </div>
+      <div
+        class=" categ d-none d-lg-block d- col-lg-2 col-md-3 col-sm-1 text-center  rounded  mx-lg-3 mx-md-4 mt-3 py-3   ">
+        <img src="./images/Juices.png" alt="">
+        <h5 class="mt-3">Juice</h5>
+      </div>
+      <div
+        class=" categ d-none d-lg-block col-lg-2 col-md-3 col-sm-1 text-center  rounded  mx-lg-3 mx-md-4 mt-3 py-3   ">
+        <img src="./images/Salad.png" alt="">
+        <h5 class="mt-3">Salad</h5>
+      </div>
+    </div>
+  </div>
+  <div class="hand-1 container text-center">
+    <div class="d-flex my-5">
+      <div class=" categ text-center  rounded  mx-2 mt-3 py-3  px-5  ">
+        <img src="./images/Vegetable.png" alt="">
+        <h5 class="mt-3">Vegetable</h5>
+      </div>
+      <div class=" categ  text-center  rounded  ms-1 mt-3 py-3  px-4 ">
+        <img src="./images/Fruits.png" alt="">
+        <h5 class="mt-3">Fruits</h5>
+      </div>
+    </div>
+  </div>
+  <div class="container mt-5 pt-4">
+    <div class="organic-food-pic ">
+      <div class="text-center pt-5">
+        <p class="text-white fs-3">Start from <span class="text">$39.99</span></p>
+        <h1 class="text-white">Organic Food up to 20% off</h1>
+        <button class="btn-3 ">Shop Now</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="container my-5">
+    <h1 class="sada mt-5 pt-4 ">Trending <span class="text">Products</span></h1>
+    <div class="d-flex align-items-center justify-content-between">
+      <p class="mt-4  d-none d-md-block">We understand importance of approaching each work and <br>
+        believe in the power of
+        simple and easy communication.
+      </p>
+      <p class="saada mt-4 d-md-none">We understand the importance of approaching each work integrally and believe in
+        the
+        power of simple and easy communication.</p>
+      <div class="d-flex d-none d-lg-block ">
+        <button class="btn-4 ">All products</button>
+        <button class="btn-5 ">Fresh Fruit</button>
+        <button class="btn-5 ">Nature</button>
+        <button class="btn-5 ">Recipies</button>
+        <button class="btn-5 ">Vegetable</button>
+      </div>
+    </div>
+    <div class="d-flex d-lg-none">
+      <button class="btn-4 ">All products</button>
+      <button class="btn-5 ">Fresh Fruit</button>
+      <button class="btn-5 ">Nature</button>
+      <button class="btn-5 ">Recip</button>
+    </div>
+
+    <div class="add-tocradd-main-card">
+
+      <div  class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
+        id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabe">
+        <div class="offcanvas-header">
+          <img width="150px" src="./images/logo-dark.png" alt="">
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <h4></h4>
+          <div class="cart-main">
+
+            <div id="cartItems" class="container my-5"></div>
+            <div id="totalPrice" class="container my-5 fs-3"></div>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+
+
+    <div class="container  my-5">
+      <div class="fruits row d-flex my-5">
+        <div class="col-sm-6 col-lg-3 mt-4 ">
+          <img width="90%" class="img-bg border" src="./images/Orange.png" alt="">
+          <div class="text-2 text-center border border-top-0">
+            <p class="  text-center fs-4 pt-4"><b>Fresh Orange</b></p>
+            <p class="  text-center ">$12.00 – $65.00</p>
+
+            <button class="btn-7 add-to-cart-btn" data-name="Fresh Orange" data-price="12.00"
+              data-img="./images/Orange.png">Add to Cart</button>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-3 mt-4"><img width="90%" class=" img-bg border" src="./images/Apple.png" alt="">
+          <div class="text-2 text-center border border-top-0">
+            <p class="  text-center pt-4 fs-4"><b>Red Apple Envy</b></p>
+            <p class=" text-center">$24.00 <span>$18.00</span></p>
+            <button class="btn-7 add-to-cart-btn" data-name="Red Apple Envy" data-price="18.00"
+              data-img="./images/Apple.png">Add to Cart</button>
+          </div>
+        </div>
+
+
+        <div class="col-sm-6 col-lg-3 mt-4"><img width="90%" class="img-bg border" src="./images/Bruccoli.png" alt="">
+          <div class="text-2 text-center border border-top-0">
+            <p class="  text-center pt-4 fs-4"><b>Green Bow</b></p>
+            <p class=" text-center">$4.60</p>
+            <button class="btn-7 add-to-cart-btn" data-name="Green Bow" data-price="4.60"
+              data-img="./images/Bruccoli.png">Add to Cart</button>
+          </div>
+        </div>
+
+
+        <div class="col-sm-6 col-lg-3 mt-4 "><img width="90%" class="img-bg border rounded" src="./images/Lemon.png"
+            alt="">
+          <div class="text-2 text-center border border-top-0">
+            <p class="  text-center pt-4 fs-4"><b>Organic Lemon</b></p>
+            <p class=" text-center">$12.00</p>
+            <button class="btn-7 add-to-cart-btn" data-name="Organic Lemon" data-price="12.00"
+              data-img="./images/Lemon.png">Add to Cart</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container my-5">
+      <div class="fruits row d-flex my-5">
+        <div class="col-sm-6 col-lg-3 mt-4"><img width="90%" class="img-bg border" src="./images/Carrots.png" alt="">
+          <div class="text-2 text-center border border-top-0">
+            <p class="  text-center fs-4 pt-4"><b>Organic Carrot</b></p>
+            <p class="  text-center ">$12.00 <span>$8.00</span></p>
+            <button class="btn-7 add-to-cart-btn" data-name="Organic Carrot" data-price="8.00"
+              data-img="./images/Carrots.png">Add to Cart</button>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-3 mt-4"><img width="90%" class=" img-bg border" src="./images/Cabbage.png" alt="">
+          <div class="text-2 text-center border border-top-0">
+            <p class="  text-center pt-4 fs-4"><b>Organic Cabbage</b></p>
+            <p class=" text-center">$30.00 <span>$22.00</span></p>
+            <button class="btn-7 add-to-cart-btn" data-name="Organic Cabbage" data-price="22.00"
+              data-img="./images/Cabbage.png">Add to Cart</button>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-3 mt-4"><img width="90%" class="img-bg border" src="./images/Potatoes.png" alt="">
+          <div class="text-2 text-center border border-top-0">
+            <p class="  text-center pt-4 fs-4"><b>Organic Potato</b></p>
+            <p class=" text-center">$4.60</p>
+            <button class="btn-7 add-to-cart-btn" data-name="Organic Potato" data-price="4.60"
+              data-img="./images/Potatoes.png">Add to Cart</button>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-3 mt-4 "><img width="90%" class="img-bg border rounded" src="./images/Peas.png"
+            alt="">
+          <div class="text-2 text-center border border-top-0">
+            <p class="  text-center pt-4 fs-4"><b>Organic Peas</b></p>
+            <p class=" text-center">$10.00 <span> $6.00</span></p>
+            <button class="btn-7 add-to-cart-btn" data-name="Organic Peas" data-price="6.00"
+              data-img="./images/Peas.png">Add to Cart</button>
+
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+
+  </div>
 
 
 
