Dell section + Footer Tootly

--- a/index.html
+++ b/index.html
@@ -475,10 +475,374 @@
 
 
 
+<!-- dELL SECTION  -->
+
+  
+  <div class="count">
+    <div class="container py-5">
+      <h1 class="sada-1 text-white pt-5 my-4">Deals Of The <span class="text"> Weeks</span></h1>
+      <p class="text-white my-3 d-none d-md-block">Organio is a design studio founded in London. Nowadays, we’ve
+        grown and <br> expanded
+        our
+        services, and have become a multinational firm.</p>
+      <p class="text-white my-3 d-md-none">Organio is a design studio founded in London. Nowadays, we’ve grown and
+        expanded our services, and have become a multinational firm.</p>
+
+        <div class="d-flex align-items-center">
+          <div class="mx-2 my-5 bg-danger px-2 py-1 rounded-4 text-center">
+            <h1 class="text-white">2156</h1>
+            <h6 class="text-white">DAYS</h6>
+          </div>
+          <div class="mx-2 my-5 bg-danger px-4 py-1 rounded-4 text-center">
+            <h1 class="text-white">12</h1>
+            <h6 class="text-white">HOUR</h6>
+          </div>
+          <div class="mx-2 my-5 bg-danger px-4 py-1 rounded-4 text-center">
+            <h1 class="text-white">57</h1>
+            <h6 class="text-white">MIN</h6>
+          </div>
+          <div class="mx-2 my-5 bg-danger px-4 py-1 rounded-4 text-center">
+            <h1 class="text-white">44</h1>
+            <h6 class="text-white">SEC</h6>
+          </div>
+        </div>
+    </div>
+  </div>
+
+
+  <div>
+    <h1 class="sada text-center mt-5">Our Farm Land <span class="text"> Farmers</span></h1>
+    <p class="text-center mt-3  d-none d-md-block">We love what we do and we do it with passion. We value the
+      experimentation of the <br>
+      message and smart incentives.</p>
+    <p class="saada text-center mt-3 d-md-none">We love what we do and we do it with passion. We value the
+      experimentation
+      of the message and smart incentives.</p>
+    <div class="container my-5">
+      <div class="fruits row d-flex my-5">
+        <div class="col-sm-6 col-lg-3 mt-4"><img width="90%" class="img-bg border" src="./images/f-1.jpg" alt="">
+          <div class="text-2 border border-top-0">
+            <p class=" text-center fs-3 pt-4"><b>Alex Maxewell</b></p>
+            <p class="text-center">CEO/Managing Director</p>
+          </div>
+        </div>
+        <div class="hidden col-sm-6 col-lg-3 mt-4"><img width="90%" class=" img-bg border" src="./images/f-2.jpg"
+            alt="">
+          <div class="text-2 border border-top-0">
+            <p class="  text-center pt-4 fs-4"><b>Justin Roberto</b></p>
+            <p class=" text-center">Manager</p>
+          </div>
+        </div>
+        <div class="hidden col-sm-6 col-lg-3 mt-4"><img width="90%" class="img-bg border" src="./images/f-3.jpg" alt="">
+          <div class="text-2 border border-top-0">
+            <p class=" text-center pt-4 fs-4"><b>Louis Agassiz</b></p>
+            <p class=" text-center">Organic Farmer</p>
+          </div>
+        </div>
+        <div class="hidden col-sm-6 col-lg-3 mt-4 "><img width="90%" class="img-bg border rounded"
+            src="./images/f-4.jpg" alt="">
+          <div class="text-2 border border-top-0 ">
+            <p class="  text-center pt-4 fs-4"><b>Carl Anderson</b></p>
+            <p class=" text-center">Agriculturist</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center align-items-center text-center">
+      <div class="dot mx-2"></div>
+      <div class="dot mx-2"></div>
+      <div class="dot mx-2"></div>
+
+    </div>
+  </div>
+
+
+
+  <!-- CLIENT SECTION  -->
+
+  <div class="contain">
+
+    <div class="container my-5  ">
+      <div class="row">
+
+        <div class="col-xs-12 col-md-6 text-center mt-4">
+          <img class="img-fluid p-5" src="./images/lady.png" alt="">
+        </div>
+        <div class=" col-xs-12 col-md-6  d-flex align-items-center p-3 ">
+
+          <div>
+
+            <h1 class="mb-5 d-none d-lg-block ">What Your Clients Are <br> <span class="text">Saying</span></h1>
+            <h1 class="sada-1 mb-5 d-lg-none">What Your Clients Are <span class="text">Saying</span></h1>
+
+            <p class="text-light-dark mb-4  d-none d-lg-block">Working With several wordpress themes and templates
+              last years,I only<br>
+              say this is the best in every level. I use it for my companies and the reviews<br>that I have already
+              are
+              all excellent</p>
+            <p class="saada text-light-dark mb-4 d-lg-none">Working With several wordpress themes and templates the last
+              years, I only can say this is the best in every level. I use it for my companies and the reviews that
+              I have already are all excellent</p>
+            <h4>Lestile Alexander</h4>
+            <p class="text-light-dark mt-3">CEO/Founder</p>
+
+
+            <div class="d-flex mt-4">
+              <a class=" left-right text-decoration-none me-4  rounded px-2 " href=""><i
+                  class="ri-arrow-left-line text-dark fs-3"></i></a>
+              <a class=" left-right text-decoration-none  rounded px-2 " href=""><i
+                  class="ri-arrow-right-line text-dark fs-3"></i></a>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+
+
+    </div>
+  </div>
+
+  <div>
+    <h1 class="sada text-center mt-5"><span class="text">Latest</span> News & Blog</h1>
+    <p class="text-center mt-3  d-none d-md-block">Follow our latest news and thoughts which focuses exclusively on
+      design, art, <br>
+      vintage, and also work updates.</p>
+    <p class="text-center mt-3 d-md-none">Follow our latest news and thoughts which focuses exclusively on design,
+      art, vintage, and also work updates.</p>
+    <div class="container my-5 py-2">
+      <div class="fruits row d-flex my-3">
+        <div class="col-sm-6 col-lg-4 mt-3"><img width="90%" class="img-bg border" src="./images/lady-hen.jpg" alt="">
+          <div class="text-2 border border-top-0">
+            <div class="d-flex justify-content-between mx-3">
+              <p>Fresh Meat</p>
+              <p>March 17,2021</p>
+            </div>
+            <h3 class="ct ms-2 pt-4  d-none d-lg-none">Our 6 of the best organic <br>chocolates to buy.</h3>
+            <h3 class="ct ms-2 pt-4 d-lg-block">Our 6 the best organic chocolates to buy.</h3>
+            <button class="btn-2 text-dark">About us</button>
+          </div>
+        </div>
+        <div class="hidden col-sm-6 col-lg-4 mt-4"><img width="90%" class=" img-bg border" src="./images/cheese.jpg"
+            alt="">
+          <div class="text-2 border border-top-0">
+            <div class="d-flex justify-content-between mx-3">
+              <p>Grocery&Frozen</p>
+              <p>March 17,2021</p>
+            </div>
+            <h3 class="ct ms-2 pt-4  d-none d-lg-none">Best guide to shopping for <br>organic ingredients.</h3>
+            <h3 class="ct ms-2 pt-4  d-lg-block">Best guide to shopping for organic ingredients.</h3>
+            <button class="btn-2 text-dark">About us</button>
+          </div>
+        </div>
+        <div class="hidden col-sm-6 col-lg-4 mt-4 d-none d-lg-block"><img width="90%" class="img-bg border"
+            src="./images/mashed-potato.jpg" alt="">
+          <div class="text-2 border border-top-0">
+            <div class="d-flex justify-content-between mx-3">
+              <p>Grocery&Frozen</p>
+              <p>March 17,2021</p>
+            </div>
+            <h3 class="ct ms-3 pt-4  d-none d-md-block ">Zechsal Magnesium <br>flakes especially made.</h3>
+            <h3 class="ct ms-3 pt-4  d-md-none ">Zechsal Magnesium flakes especially made.</h3>
+            <button class="btn-2 text-dark">About us</button>
+          </div>
+        </div>
+        <div class="hidden col-sm-6 col-lg-4 mt-4 d-none d-lg-none"><img width="90%" class="img-bg border"
+            src="./images/mashed-potato.jpg" alt="">
+          <div class="text-2 border border-top-0">
+            <div class="d-flex justify-content-between mx-3">
+              <p>Grocery&Frozen</p>
+              <p>March 17,2021</p>
+            </div>
+            <h3 class="ct ms-3 pt-4  d-none d-md-block ">Zechsal Magnesium <br>flakes especially made.</h3>
+            <h3 class="ct ms-3 pt-4  d-md-none ">Zechsal Magnesium flakes especially made.</h3>
+            <button class="btn-2 text-dark">About us</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center align-items-center text-center">
+      <div class="dot mx-2"></div>
+      <div class="dot mx-2"></div>
+      <div class="dot mx-2"></div>
+      <div class="dot mx-2"></div>
+    </div>
+  </div>
 
 
 
 
+  <!-- FOOTER SECTION  -->
+
+
+  <div class="footer-bg mt-4">
+    <div class="container">
+      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-4 mt-4">
+        <div class="col mb-3">
+          <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
+            <img width="160px" src="./images/footer-logo.png" alt="">
+          </a>
+          <p class="pa text-white mt-4">The variety of products available at our store at the moment is vast, but we
+            still continue to widen our assortment.</p>
+          <div class="d-flex mt-4 ">
+            <a class="logos-1 text-decoration-none mx-1  " href=""><i
+                class=" align-items-center ri-facebook-fill fs-4 text-dark"></i></a>
+            <a class="logos-1 text-decoration-none mx-1  " href=""><i
+                class=" align-items-center ri-twitter-fill fs-4 text-dark"></i></a>
+            <a class="logos-1 text-decoration-none mx-1  " href=""><i
+                class=" align-items-center ri-basketball-line fs-4 text-dark"></i></a>
+            <a class="logos-1 text-decoration-none mx-1  " href=""><i
+                class=" align-items-center ri-behance-fill fs-4 text-dark"></i></a>
+          </div>
+        </div>
+        <div class="col mb-3">
+        </div>
+        <div class="col mb-3 mt-4 ">
+          <h5 class="text-white">Information</h5>
+          <div class="hr-1 my-2"></div>
+          <ul class="nav flex-column mt-3">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Specials</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Wishlist</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Compare</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Our Stores</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">About Us</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="col mb-3 mt-4">
+          <h5 class="text-white">Categories</h5>
+          <div class="hr-1  my-2"></div>
+          <ul class="nav flex-column mt-3">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Bread & Bakery</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Grocery & Frozen</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Fresh Fruits</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Fresh Meat</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Organic</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Recipies</a></li>
+          </ul>
+        </div>
+        <div class="col mb-3 mt-4">
+          <h5 class="text-white">My Account</h5>
+          <div class="hr-1 my-2"></div>
+          <ul class="nav flex-column mt-3">
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">My Account</a></li>
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">Order History</a></li>
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">Wishlist</a></li>
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">Specials</a></li>
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">Newsletter</a></li>
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">About Us</a></li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+  </div>
+  <div class="footer-bg-1 mt-4">
+    <div class="container">
+      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-4 mt-4">
+        <div class="col mb-3">
+          <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
+            <img width="160px" src="./images/footer-logo.png" alt="">
+          </a>
+          <p class="pa text-white mt-4">The variety of products available at our store at the moment is vast, but we
+            still continue to widen our assortment.</p>
+          <div class="d-flex mt-4 ">
+            <a class="logos-1 text-decoration-none mx-1  " href=""><i
+                class=" align-items-center ri-facebook-fill fs-4 text-dark"></i></a>
+            <a class="logos-1 text-decoration-none mx-1  " href=""><i
+                class=" align-items-center ri-twitter-fill fs-4 text-dark"></i></a>
+            <a class="logos-1 text-decoration-none mx-1  " href=""><i
+                class=" align-items-center ri-basketball-line fs-4 text-dark"></i></a>
+            <a class="logos-1 text-decoration-none mx-1  " href=""><i
+                class=" align-items-center ri-behance-fill fs-4 text-dark"></i></a>
+          </div>
+        </div>
+        <div class="col mb-3">
+        </div>
+        <div class="col mb-3 mt-4 ">
+          <h5 class="text-white">Information</h5>
+          <div class="hr-1 my-2"></div>
+          <ul class="nav flex-column mt-3">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Specials</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Wishlist</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Compare</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Our Stores</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">About Us</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="col mb-3 mt-4">
+          <h5 class="text-white">Categories</h5>
+          <div class="hr-1  my-2"></div>
+          <ul class="nav flex-column mt-3">
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Bread & Bakery</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Grocery & Frozen</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Fresh Fruits</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Fresh Meat</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Organic</a></li>
+            <li class="nav-item mb-2"><a href="#" class="nav-link p-0  text-white">Recipies</a></li>
+          </ul>
+        </div>
+        <div class="col mb-3 mt-4">
+          <h5 class="text-white">My Account</h5>
+          <div class="hr-1 my-2"></div>
+          <ul class="nav flex-column mt-3">
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">My Account</a></li>
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">Order History</a></li>
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">Wishlist</a></li>
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">Specials</a></li>
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">Newsletter</a></li>
+            <li class="nav-item mb-2 "><a href="#" class="nav-link p-0 text-white">About Us</a></li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+  </div>
+  <div class="container py-3  ">
+    <div class="row">
+      <div class="col-xs-12 col-md-6 ">
+        <h6>© 2024 Organio – <span class="text-success">CaseThemes</span>. All rights reserved.</h6>
+      </div>
+      <div class=" col-xs-12 col-md-6 ">
+        <img class="ms-5" src="./images/payment-icons2.png" alt="">
+      </div>
+    </div>
+  </div>
+
+  <div style="width: 250px;" class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false"
+    tabindex="-1" id="offcanvasScrolling2" aria-labelledby="offcanvasScrollingLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title ms-4 mt-4" id="offcanvasScrollingLabel"><img width="140px" src="./images/logo-dark.png"
+          alt=""></h5>
+
+      
+    </div>
+    <div class="offcanvas-body">
+      <h5 class="name">Home</h5>
+
+      <hr>
+
+      <h5 class="name">Pages</h5>
+
+      <hr>
+
+      <h5 class="name">Shop</h5>
+
+      <hr>
+
+      <h5 class="name">Portfolio</h5>
+
+      <hr>
+
+      <h5 class="name">Blog</h5>
+
+      <hr>
+
+      <h5 class="name">Elements</h5>
+
+      <hr>
+
+    </div>
+  </div>
 
 
 
