--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
   </div>
   <div class="hand-1 container text-center">
     <div class="d-flex my-5">
-      <div class=" categ text-center  rounded  mx-2 mt-3 py-3  px-5  ">
+      <div class=" categ text-center  rounded ms-2  me-3 mt-3 py-3  px-4  ">
         <img src="./images/Vegetable.png" alt="">
         <h5 class="mt-3">Vegetable</h5>
       </div>
