--- a/pages/login-page/login.html
+++ b/pages/login-page/login.html
@@ -36,7 +36,7 @@
 
           <span class="text-black">|</span>
           <a class=" text-decoration-none me-2 border-0 py-3 px-2 bg-transparent text-black "
-            href="../register-page/register.html">Register</a>
+            href="/pages/register-page/register.html">Register</a>
         </div>
       </div>
     </div>
