--- a/pages/register-page/register.html
+++ b/pages/register-page/register.html
@@ -36,7 +36,7 @@
           <span class="text-black">|</span>
 
           <a class=" text-decoration-none me-2 border-0 py-3 px-2 bg-transparent text-black "
-            href="/pages/login-page/login.html">Log in</a>
+            href="../login-page/login.html">Log in</a>
 
           <span class="text-black">|</span>
           <a class=" text-decoration-none me-2 border-0 py-3 px-2 bg-transparent text-black " href="">Register</a>
@@ -49,7 +49,7 @@
     <div class="mx-5">
       <div class="d-flex justify-content-between align-content-center">
         <a class="navbar-brand" href="../../index.html">
-          <img   width="130px" src="/images/logo-dark.png" class="w-50 ms-2" alt="Organic" />
+          <img   width="130px" src="../../images/logo-dark.png" class=" ms-2" alt="Organic" />
         </a>
         <div class="d-flex justify-content-center align-items-center">
           <div class="input-group">
