responsible mobile screen

--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
 
 
     <div class="tests text-center">
-      <h1 class="suc-word text-white">Always Fresh & <span class="text">Organic</span> <br>Vegetables</h1>
-      <p class="fs-5 text-white mt-5">Our Job is to filling Your Tummy With Delicious Healthy Foodand Fast free
+      <h3 class="suc-word text-white">Always Fresh & <span class="text">Organic</span> <br>Vegetables</h3>
+      <p class="fs-6 text-white mt-5">Our Job is to filling Your Tummy With Delicious Healthy Foodand Fast free
         Delivery.
       </p>
 
-      <button class="btn-1 ">Shop Now</button>
-      <button class="btn-2">About us</button>
+      <button class="btn-1 fs-6">Shop Now</button>
+      <button class="btn-2 fs-6">About us</button>
     </div>
 
   </div>
